finished adding images just need one more

--- a/css/styles.css
+++ b/css/styles.css
@@ -186,3 +186,13 @@ footer a {
 footer img {
     height: 90px;
 }
+
+.alex {
+    height: 199.83;
+    width: 199.83;
+}
+
+#size {
+        height: 203px;
+        width: 199px;
+}
